# audioreconstruction

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
.github/: pull_request_template.md
backend/: .env.example  main.py  pyproject.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
frontend/: .gitignore  CLAUDE.md  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  LightRays.jsx  index.css
model/: .gitignore  README.md  __init__.py  config.py  conversion_to_pt.py  coversion_to_safetensors.py  dataset.py  discriminator.py  evaluate.py  export.py  generator.py  log.txt  losses.py  output.txt  prepare_data.py  pyproject.toml  train.py  utils.py
model/checkpoints/: config.json
model/checkpoints/best/: discriminator.pt  discriminator.safetensors  generator.pt  generator.safetensors  training_state.pt
plan/: electron-migration.md
server/: .gitignore  app.py  audio_io.py  batcher.py  modal_app.py  requirements.txt
server/model/: config.py  evaluate.py
test/: README.md  eval_mp3.py  lsd.py  mel_ssim.py  pesq.py  si_sdr.py  snr.py
tests/: README.md  test.py
ui/: design-brief.md  index.html
