[project]
name = "audioreconstruction"
version = "0.1.0"
description = "This is the python application that created and serves audioreconstruction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "libtorch>=1.2.0.1",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
