[project]
name = "audioreconstruction"
version = "2.0"
description = "This is the python application that created and serves audioreconstruction"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Rohan Prasen Kedari", email = "rohanprasenkedari@gmail.com"},
]

dependencies = [
    "click>=8.4.0",
    "fastapi>=0.136.1",
    "libtorch>=1.2.0.1",
    "modal>=1.4.3",
    "pesq>=0.0.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
