[project]
name = "audioreconstruction-backend"
version = "0.1.0"
description = "This is the python package that contains the code to all the backend services of the application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
